<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/rowTitleEditController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Edit label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowControllerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_controller_type" />

            <Spinner
                android:id="@+id/spinnerControllerType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/label_choose_controller_type" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowWhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_where" />

            <EditText
                android:id="@+id/txtControllerWhere"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title" />

            <EditText
                android:id="@+id/txtControllerTitle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAddLabel"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:gravity="center_vertical|left"
            android:orientation="horizontal"
            android:paddingBottom="2dip"
            android:paddingLeft="4dip" >

            <TextView
                android:id="@+id/txtLabels"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_labels" />

            <TextView
                android:id="@+id/txtLabelsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_label_count_empty"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/list_item_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="15dip"
            android:gravity="center_vertical|left"
            android:orientation="horizontal"
            android:paddingLeft="4dip" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnEditControllerSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/btnEditControllerCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>