<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/rowTitleSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/title_settings"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowServerIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowTxtServerIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txtServerIP"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_separator" />

            <EditText
                android:id="@+id/txtServerPort"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/rowControllerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

</ScrollView>